--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
         run: npm run build  
 
       - name: Publish to NPM
+        if: github.ref == 'refs/heads/main'
         evn:
             NODE_AUTH_TOKEN:${{secrets.NPM_TOkEN}}
         run: npm publish
