--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,6 @@ jobs:
 
       - name: Publish to NPM
         if: github.ref == 'refs/heads/main'
-        evn:
+        env:
             NODE_AUTH_TOKEN:${{secrets.NPM_TOKEN}}
         run: npm publish
