--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-a11y": "^8.2.6",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
