--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "lts/*"
+          registry-url: https://registry.npmjs.org
 
       - name: Install dependencies
         run: npm install
@@ -35,6 +36,6 @@ jobs:
 
       - name: Publish to NPM
         if: github.ref == 'refs/heads/main'
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-        run: npm publish
