fix: update release and publish config

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
+    "@semantic-release/npm": "^12.0.1",
     "@storybook/addon-a11y": "^8.2.6",
     "@storybook/addon-essentials": "^8.2.4",
     "@storybook/addon-interactions": "^8.2.4",
@@ -85,5 +86,8 @@
   "peerDepandencies": {
     "class-variance-authority": "^0.7.0",
     "react": "^18.3.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
