--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,21 +21,22 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "lts/*"
-          registry-url: https://registry.npmjs.org
+          registry-url: 'https"//registry.npmjs.org'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
-
       - name: Build the package
         run: npm run build
 
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
+
       - name: Publish to NPM
         if: github.ref == 'refs/heads/main'
-        run: npm publish --access public
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
