--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,13 @@ jobs:
       - name: Build the package
         run: npm run build
 
+      - name: Debug
+        run: |
+          echo "NPM_TOKEN: ${{secrets.NPM_TOKEN}}"
+          npm config list
+        env:
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
