--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,9 +33,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          echo "First 4 characters of NPM Token: ${NODE_AUTH_TOKEN: -4}"
-          npx semantic-release
+        run: npx semantic-release
 
       - name: Publish to NPM
         if: github.ref == 'refs/heads/main'
