--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,9 @@
-name: Release
+name: Publish
 
 on:
   push:
     branches:
       - main
-      - dev
 
 jobs:
   release:
@@ -26,7 +25,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Build the package
+        run: npm run build
+
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
